Fix fdo#47406 incorrect relative moves after closePath

I missed the fact that odf export still uses the old exporter in
xmloff/source/draw/xexptran.cxx, which was not fixed wrt. the update
of current position in basegfx/source/polygon/b2dsvgpolypolygon.cxx