xmloff/source/draw/xexptran.cxx
@@ -1606,6 +1606,7 @@ void SdXMLImExSvgDElement::AddPolygon(
 
         // bezier poly, handle curves
         bool  bDidWriteStart(false);
+        sal_Int32 nStartX(0), nStartY(0);
 
         for(sal_Int32 a(0L); a < nCnt; a++)
         {
@@ -2080,6 +2081,8 @@ void SdXMLImExSvgDElement::AddPolygon(
 
                         // remember start written
                         bDidWriteStart = true;
+                        nStartX = nX;
+                        nStartY = nY;
                     }
 
                     // remember new last position
@@ -2100,6 +2103,13 @@ void SdXMLImExSvgDElement::AddPolygon(
                 aNewString += rtl::OUString(static_cast<sal_Unicode>('z'));
             else
                 aNewString += rtl::OUString(static_cast<sal_Unicode>('Z'));
+
+            // update current point - we're back at the start
+            if( bDidWriteStart )
+            {
+                mnLastX = nStartX;
+                mnLastY = nStartY;
+            }
         }
 
         // append new string
